--- a/Bakery-app/package.json
+++ b/Bakery-app/package.json
@@ -17,8 +17,10 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "sass": "^1.94.2"
